# androidauto

./: build.gradle  settings.gradle
automotive/: build.gradle
automotive/src/androidTest/java/com/infolitz/musicplayer/: ExampleInstrumentedTest.java
automotive/src/main/: AndroidManifest.xml
automotive/src/main/res/values/: themes.xml
automotive/src/test/java/com/infolitz/commwithc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/res/values/: strings.xml  themes.xml
mobile/src/main/res/values-night/: themes.xml
mylibrary/: build.gradle
mylibrary/src/main/: AndroidManifest.xml
shared/: build.gradle
shared/src/main/: AndroidManifest.xml
shared/src/main/cpp/: CMakeLists.txt  cpp_code.cpp
shared/src/main/cpp/jni/: my_test_conn.cpp  use_my_wiring_Lib.cpp  wiringPi.c  wiringPi.h  wiringSerial.c  wiringSerial.h
shared/src/main/python/: uart.py
shared/src/main/res/drawable/: ic_arrow_left.xml  ic_baseline_music_note_24.xml  ic_playlist_play.xml  ic_skip_next.xml
shared/src/main/res/layout/: activity_bluetooth.xml  activity_main.xml  card_view_speedometer.xml  fragment_bluetooth.xml  fragment_example_write_usb.xml  fragment_read_usb.xml  fragment_read_write.xml  fragment_write_usb.xml  parent_music.xml  single_musiclistlayout.xml
shared/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
shared/src/main/res/values-night/: themes.xml
shared/src/main/res/xml/: accessory_filter.xml
speedviewlib/: build.gradle
(+49 files in other folders)
